--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+.wrapper {
+  width: 250px;
+  padding: 10px;
+  border: 2px solid #6be3f8;
+  border-radius: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.counter {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 100px;
+  font-size: 40px;
+  font-weight: 700;
+  color: #2d2a37;
+  border-radius: 5px;
+  background-color: #6be3f8;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.counter-max {
+  color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.counter-btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0 15px;
+  padding: 10px;
+  border: 2px solid #6be3f8;
+  border-radius: 5px;
+}
+
+.counter-btn {
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #6be3f7;
+  font-size: 22px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.counter-btn:active {
+  color: #6be3f7;
+  background-color: #2d2a37;
+}
+
+.counter-btn:disabled {
+  background-color: #457686;
 }
