--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,34 @@
 .wrapper {
-  width: 250px;
-  padding: 10px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  gap: 0 30px;
+  align-items: center;
+  justify-content: center;
+}
+
+.counter-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border: 2px solid #6be3f8;
+  padding: 10px;
   border-radius: 5px;
+  height: 200px;
 }
 
 .counter {
+  width: 250px;
+  height: 100px;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100px;
   font-size: 40px;
   font-weight: 700;
-  color: #2d2a37;
-  border-radius: 5px;
-  background-color: #6be3f8;
+  color: #6be3f7;
+  background-color: #282a33;
+  border: 2px solid #6be3f8;
   margin-bottom: 10px;
 }
 
@@ -33,20 +46,45 @@
   border-radius: 5px;
 }
 
-.counter-btn {
-  padding: 5px 10px;
+/* --------------------------------------------------------------------- */
+
+.counter-set {
+  width: 250px;
+  height: 200px;
+  border: 2px solid #6be3f8;
+  padding: 10px;
   border-radius: 5px;
-  background-color: #6be3f7;
-  font-size: 22px;
-  font-weight: 700;
-  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.counter-btn:active {
+.counter-set-values {
+  height: 100px;
+  padding: 10px;
+  border: 2px solid #6be3f8;
+  border-radius: 5px;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.counter-set-value {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.counter-set-label {
   color: #6be3f7;
-  background-color: #2d2a37;
 }
 
-.counter-btn:disabled {
-  background-color: #457686;
+.counter-set-button {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #6be3f8;
+  border-radius: 5px;
 }
